fix : updated tests