@@ -1,8 +1,5 @@
 package manager;
 
-import manager.Managers;
-import manager.TaskManager;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import tasks.Epic;
@@ -10,238 +7,267 @@ import tasks.SubTask;
 import tasks.Task;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
-public class TaskManagerTest <E extends TaskManager>{
+import static org.junit.jupiter.api.Assertions.*;
+
+class TaskManagerTest {
 
     TaskManager taskManager;
     Task task;
     Task taskTwo;
+    Task taskThree;
     Epic epic;
     Epic epicTwo;
     SubTask subTask;
     SubTask subTaskTwo;
 
     @BeforeEach
-    public void beforeEach(){
+    public void beforeEach() {
         taskManager = Managers.getDefault();
-        task = new Task("","",0,20, LocalDateTime.of
-                (2000,1,1,1,1));
-        taskTwo = new Task("","",1,20, LocalDateTime.of
-                (2010,1,1,1,1));
-        epic = new Epic("","",2,20, LocalDateTime.MAX);
-        epicTwo = new Epic("","",5,20, LocalDateTime.MAX);
-        subTask = new SubTask("","",2,3,20,LocalDateTime.of
-                (2020,2,2,2,2));
-        subTaskTwo = new SubTask("","",2,4,20,LocalDateTime.of
-                (2030,2,2,2,2));
+        task = new Task("", "", 0, 20, LocalDateTime.of
+                (2000, 1, 1, 1, 1));
+        taskTwo = new Task("", "", 1, 20, LocalDateTime.of
+                (2010, 1, 1, 1, 1));
+        taskThree = new Task("", "", 10, 20, LocalDateTime.of
+                (2015, 1, 1, 1, 1));
+        epic = new Epic("", "", 2);
+        epicTwo = new Epic("", "", 5);
+        subTask = new SubTask("", "", 2, 3, 20, LocalDateTime.of
+                (2020, 2, 2, 2, 2));
+        subTaskTwo = new SubTask("", "", 2, 4, 20, LocalDateTime.of
+                (2030, 2, 2, 2, 2));
     }
 
     @Test
-    public void addedTaskOrEpicShouldInList(){
-        Assertions.assertTrue(taskManager.addTaskOrEpic(task));
-        Assertions.assertTrue(taskManager.addTaskOrEpic(epic));
-    }
-
-    @Test
-    public void addedSubTaskNoByThatMethodNoShouldInList(){
-        taskManager.addTaskOrEpic(epic);
-        Assertions.assertFalse(taskManager.addTaskOrEpic(subTask));
-    }
-
-    @Test
-    public void addedSudTaskShouldInList(){
-        taskManager.addTaskOrEpic(epic);
-        Assertions.assertTrue(taskManager.addSubTask(subTask));
-    }
-
-    @Test
-    public void updatedEpicShouldUpdateInList(){
+    void addedTaskOrEpicShouldInList() {
         taskManager.addTaskOrEpic(task);
-        Assertions.assertTrue(taskManager.updateTaskOrEpic(taskTwo , 0));
+        assertEquals(List.of(task), taskManager.getAllTask());
+        taskManager.addTaskOrEpic(taskThree);
+        taskManager.addTaskOrEpic(taskTwo);
+        assertIterableEquals((List.of(task, taskThree, taskTwo)), taskManager.getAllTask());
     }
 
     @Test
-    public void epicWithSubtasksShouldUpdateEpicInListWithoutSubtasks(){
+    void addedSubTaskNoByThatMethodNoShouldInList() {
+        taskManager.addTaskOrEpic(task);
         taskManager.addTaskOrEpic(epic);
         taskManager.addTaskOrEpic(subTask);
-        Assertions.assertTrue(taskManager.updateTaskOrEpic(epicTwo,2));
-        Assertions.assertEquals(List.of() , taskManager.getAllSubTaskOfEpic(epicTwo.getId()));
+        assertIterableEquals((List.of(task, epic)), taskManager.getAllTypeTask());
     }
 
     @Test
-    public void updatedSubTaskNoByThatMethodNoShouldInList(){
+    void addedSudTaskShouldInList() {
         taskManager.addTaskOrEpic(epic);
         taskManager.addSubTask(subTask);
-        Assertions.assertFalse(taskManager.updateTaskOrEpic(subTaskTwo,subTask.getId()));
+        assertIterableEquals((List.of(subTask)), taskManager.getAllSubTaskOfEpic(epic.getId()));
+        taskManager.addSubTask(subTaskTwo);
+        assertIterableEquals(List.of(subTask, subTaskTwo), taskManager.getAllSubTaskOfEpic(epic.getId()));
     }
 
     @Test
-    public void updatedTypeTasksShouldMatchWithReplacedTypeTasks(){
+    void updatedEpicShouldUpdateInList() {
         taskManager.addTaskOrEpic(task);
-        Assertions.assertFalse(taskManager.updateTaskOrEpic(epic , 0));
+        taskManager.updateTaskOrEpic(taskTwo, task.getId());
+        assertEquals(List.of(taskTwo), taskManager.getAllTask());
+        taskManager.updateTaskOrEpic(taskThree, taskTwo.getId());
+        assertEquals(List.of(taskThree), taskManager.getAllTask());
     }
 
     @Test
-    public void updatedSubtasksShouldInList(){
+    void epicWithSubtasksShouldUpdateEpicInListWithoutSubtasks() {
+        taskManager.addTaskOrEpic(epic);
+        taskManager.addTaskOrEpic(subTask);
+        assertEquals(List.of(epic), taskManager.getAllEpic());
+        taskManager.updateTaskOrEpic(epicTwo, epic.getId());
+        assertEquals(List.of(epicTwo), taskManager.getAllEpic());
+        assertEquals(Collections.emptyList(), taskManager.getAllSubTaskOfEpic(epicTwo.getId()));
+    }
+
+    @Test
+    void updatedSubTaskNoByThatMethodNoShouldInList() {
         taskManager.addTaskOrEpic(epic);
         taskManager.addSubTask(subTask);
-        Assertions.assertTrue(taskManager.updateSubtask(subTaskTwo,subTask.getId()));
+        taskManager.updateTaskOrEpic(subTaskTwo, subTask.getId());
+        assertEquals(List.of(subTask), taskManager.getAllSubTaskOfEpic(epic.getId()));
+        assertNotEquals(List.of(subTaskTwo), taskManager.getAllSubTaskOfEpic(epic.getId()));
     }
 
     @Test
-    public void InMethodUpdatedSubtasksShouldCorrectSecondParameters(){
+    void updatedTypeTasksShouldMatchWithReplacedTypeTasks() {
+        taskManager.addTaskOrEpic(task);
+        taskManager.updateTaskOrEpic(epic, 0);
+        assertEquals(List.of(task), taskManager.getAllTypeTask());
+    }
+
+    @Test
+    void updatedSubtasksShouldInList() {
+        taskManager.addTaskOrEpic(epic);
+        taskManager.addSubTask(subTask);
+        assertEquals(List.of(subTask), taskManager.getAllSubTaskOfEpic(epic.getId()));
+        taskManager.updateSubtask(subTaskTwo, subTask.getId());
+        assertEquals(List.of(subTaskTwo), taskManager.getAllSubTaskOfEpic(epic.getId()));
+    }
+
+    @Test
+    void InMethodUpdatedSubtasksShouldCorrectSecondParameters() {
         taskManager.addTaskOrEpic(task);
         taskManager.addTaskOrEpic(epic);
         taskManager.addSubTask(subTask);
-        Assertions.assertFalse(taskManager.updateSubtask(subTaskTwo,epic.getId()));
-        Assertions.assertFalse(taskManager.updateSubtask(subTaskTwo,task.getId()));
+        taskManager.updateSubtask(subTaskTwo, epic.getId());
+        taskManager.updateSubtask(subTaskTwo, task.getId());
+        assertEquals(List.of(subTask), taskManager.getAllSubTaskOfEpic(epic.getId()));
     }
 
     @Test
-    public void remoteTaskOrEpicShouldDelete(){
+    void remoteTaskOrEpicShouldDelete() {
         taskManager.addTaskOrEpic(task);
         taskManager.addTaskOrEpic(epic);
-        Assertions.assertTrue(taskManager.removeTaskOrEpic(task.getId()));
-        Assertions.assertTrue(taskManager.removeTaskOrEpic(epic.getId()));
+        taskManager.addSubTask(subTask);
+        taskManager.removeTaskOrEpic(task.getId());
+        taskManager.removeTaskOrEpic(epic.getId());
+        assertEquals(Collections.emptyList(), taskManager.getAllTypeTask());
     }
 
     @Test
-    public void inMethodRemoteTaskOrEpicShouldGiveNoSubtask(){
+    void inMethodRemoteTaskOrEpicShouldGiveNoSubtask() {
         taskManager.addTaskOrEpic(epic);
         taskManager.addSubTask(subTask);
-        Assertions.assertFalse(taskManager.removeTaskOrEpic(subTask.getId()));
+        taskManager.removeTaskOrEpic(subTask.getId());
+        assertEquals(List.of(subTask), taskManager.getAllSubTaskOfEpic(epic.getId()));
     }
 
     @Test
-    public void inMethodRemoveSubtaskShouldPassCorrectParameter(){
+    void inMethodRemoveSubtaskShouldPassCorrectParameter() {
         taskManager.addTaskOrEpic(epic);
         taskManager.addSubTask(subTask);
-        Assertions.assertTrue(taskManager.removeSubtask(subTask.getId()));
+        taskManager.removeSubtask(subTask.getId());
+        assertEquals(Collections.emptyList(), taskManager.getAllSubTaskOfEpic(epic.getId()));
     }
 
     @Test
-    public void inMethodRemoveSubtaskNoShouldPassNoCorrectParameters(){
+    void inMethodRemoveSubtaskNoShouldPassNoCorrectParameters() {
         taskManager.addTaskOrEpic(epic);
         taskManager.addSubTask(subTask);
-        Assertions.assertFalse(taskManager.removeSubtask(epic.getId()));
+        taskManager.removeSubtask(epic.getId());
+        assertEquals(List.of(epic), taskManager.getAllEpic());
     }
 
     @Test
-    public void methodRemoveAllSubtaskOfDeletedEpicShouldDeleteAllSubtaskOfEpic(){
+    void methodRemoveAllSubtaskOfDeletedEpicShouldDeleteAllSubtaskOfEpic() {
         taskManager.addTaskOrEpic(epic);
         taskManager.addSubTask(subTask);
         taskManager.addSubTask(subTaskTwo);
-        Assertions.assertEquals(List.of(subTask,subTaskTwo) , epic.getSubTasks());
+        assertEquals(List.of(subTask, subTaskTwo), epic.getSubTasks());
         taskManager.removeAllSubtaskOfDeletedEpic(epic);
-        Assertions.assertEquals(List.of() , epic.getSubTasks());
+        assertEquals(Collections.emptyList(), epic.getSubTasks());
     }
+
     @Test
-    public void removedAllTypeTaskShouldDelete(){
+    void removedAllTypeTaskShouldDelete() {
         taskManager.addTaskOrEpic(task);
         taskManager.addTaskOrEpic(epic);
         taskManager.addTaskOrEpic(taskTwo);
-        Assertions.assertTrue(taskManager.removeAllTypeTask());
-        Assertions.assertEquals(List.of(),taskManager.getAllTypeTask());
+        assertTrue(taskManager.removeAllTypeTask());
+        assertEquals(Collections.emptyList(), taskManager.getAllTypeTask());
     }
 
     @Test
-    public void outputAllTypeTasksShouldGetAllTypeTasks(){
+    void outputAllTypeTasksShouldGetAllTypeTasks() {
         addTasksInTaskManager();
-        Assertions.assertEquals(List.of(task,epic,epicTwo,subTask,subTaskTwo),taskManager.getAllTypeTask());
+        assertEquals(List.of(task, epic, epicTwo, subTask, subTaskTwo), taskManager.getAllTypeTask());
     }
 
     @Test
-    public void outputAllTypeTasksShouldGetAllTypeTasksWithoutTasksNoAdded(){
+    void outputAllTypeTasksShouldGetAllTypeTasksWithoutTasksNoAdded() {
         addTasksInTaskManager();
-        Assertions.assertNotEquals(List.of(task,taskTwo,epic,epicTwo,subTask,subTaskTwo),taskManager.getAllTypeTask());
+        assertNotEquals(List.of(task, taskTwo, epic, epicTwo, subTask, subTaskTwo), taskManager.getAllTypeTask());
     }
 
     @Test
-    public void outputTasksShouldGetTasks(){
+    void outputTasksShouldGetTasks() {
         addTasksInTaskManager();
-        Assertions.assertEquals(List.of(task),taskManager.getAllTask());
+        assertEquals(List.of(task), taskManager.getAllTask());
     }
 
     @Test
-    public void outputTasksShouldGetTasksWithoutTaskNoAdded(){
+    void outputTasksShouldGetTasksWithoutTaskNoAdded() {
         addTasksInTaskManager();
-        Assertions.assertNotEquals(List.of(task , taskTwo),taskManager.getAllTask());
+        assertNotEquals(List.of(task, taskTwo), taskManager.getAllTask());
     }
 
     @Test
-    public void outputEpicShouldGetEpic(){
+    void outputEpicShouldGetEpic() {
         addTasksInTaskManager();
-        Assertions.assertEquals(List.of(epic,epicTwo),taskManager.getAllEpic());
+        assertEquals(List.of(epic, epicTwo), taskManager.getAllEpic());
     }
 
     @Test
-    public void outputEpicsShouldGetTasksWithoutEpicNoAdded(){
+    void outputEpicsShouldGetTasksWithoutEpicNoAdded() {
         addTasksInTaskManager();
-        Assertions.assertNotEquals(List.of(epic),taskManager.getAllEpic());
+        assertNotEquals(List.of(epic), taskManager.getAllEpic());
     }
 
     @Test
-    public void outputSubtasksOfEpicShouldGetSubtasksOfEpic(){
+    void outputSubtasksOfEpicShouldGetSubtasksOfEpic() {
         addTasksInTaskManager();
-        Assertions.assertEquals(List.of(subTask,subTaskTwo),taskManager.getAllSubTaskOfEpic(epic.getId()));
+        assertEquals(List.of(subTask, subTaskTwo), taskManager.getAllSubTaskOfEpic(epic.getId()));
     }
 
     @Test
-    public void outputSubtasksOfEpicShouldGetTasksWithoutSubtasksOfEpicNoAdded(){
+    void outputSubtasksOfEpicShouldGetTasksWithoutSubtasksOfEpicNoAdded() {
         addTasksInTaskManager();
-        Assertions.assertNotEquals(List.of(subTask),taskManager.getAllSubTaskOfEpic(epic.getId()));
-        Assertions.assertNotEquals(List.of(),taskManager.getAllSubTaskOfEpic(epic.getId()));
+        assertNotEquals(List.of(subTask), taskManager.getAllSubTaskOfEpic(epic.getId()));
+        assertNotEquals(List.of(), taskManager.getAllSubTaskOfEpic(epic.getId()));
     }
 
     @Test
-    public void outputPrioritizedTasksShouldGetTasksInRightOrder(){
+    void outputPrioritizedTasksShouldGetTasksInRightOrder() {
         addTasksInTaskManager();
-        Assertions.assertIterableEquals(List.of(task,epic,subTask,subTaskTwo,epicTwo),taskManager.getPrioritizedTasks());
-    }
-//Как проверить разный тип коллекции на неравенство, не знаю. Метода assertNotIterableEquals нет... Если ли способ?
-
-    @Test
-    public void outputEmptyPrioritizedTasksShouldEmpty(){
-        Assertions.assertIterableEquals(List.of(),taskManager.getPrioritizedTasks());
+        assertIterableEquals(List.of(task, epic, subTask, subTaskTwo, epicTwo), taskManager.getPrioritizedTasks());
     }
 
     @Test
-    public void outputListHistoryShouldHaveRequestedTasks(){
-        addTasksInTaskManager();
-        taskManager.getTaskById(task.getId());
-        taskManager.getTaskById(epic.getId());
-        Assertions.assertEquals(List.of(task,epic) , taskManager.getHistoryManager());
+    void outputEmptyPrioritizedTasksShouldEmpty() {
+        assertIterableEquals(Collections.emptyList(), taskManager.getPrioritizedTasks());
     }
 
     @Test
-    public void outputListHistoryNoShouldHaveRequestedTasks(){
+    void outputListHistoryShouldHaveRequestedTasks() {
         addTasksInTaskManager();
         taskManager.getTaskById(task.getId());
         taskManager.getTaskById(epic.getId());
-        Assertions.assertNotEquals(List.of(task,epic , subTask) , taskManager.getHistoryManager());
+        assertEquals(List.of(task, epic), taskManager.getHistoryManager());
     }
 
     @Test
-    public void remoteTasksFromListHistoryNoShouldInListHistory(){
+    void outputListHistoryNoShouldHaveRequestedTasks() {
         addTasksInTaskManager();
         taskManager.getTaskById(task.getId());
         taskManager.getTaskById(epic.getId());
-        taskManager.removeTaskInHistory(task.getId());
-        Assertions.assertEquals(List.of(epic) , taskManager.getHistoryManager());
+        assertNotEquals(List.of(task, epic, subTask), taskManager.getHistoryManager());
     }
 
     @Test
-    public void remoteTasksFromListHistoryShouldDelete(){
+    void remoteTasksFromListHistoryNoShouldInListHistory() {
         addTasksInTaskManager();
         taskManager.getTaskById(task.getId());
         taskManager.getTaskById(epic.getId());
         taskManager.removeTaskInHistory(task.getId());
-        Assertions.assertNotEquals(List.of(epic, subTask) , taskManager.getHistoryManager());
+        assertEquals(List.of(epic), taskManager.getHistoryManager());
     }
 
-    private void addTasksInTaskManager(){
+    @Test
+    void remoteTasksFromListHistoryShouldDelete() {
+        addTasksInTaskManager();
+        taskManager.getTaskById(task.getId());
+        taskManager.getTaskById(epic.getId());
+        taskManager.removeTaskInHistory(task.getId());
+        assertNotEquals(List.of(epic, subTask), taskManager.getHistoryManager());
+    }
+
+    private void addTasksInTaskManager() {
         taskManager.addTaskOrEpic(task);
         taskManager.addTaskOrEpic(epic);
         taskManager.addTaskOrEpic(epicTwo);
